tests/parser/errors/self.rv
struct Foo {
    fn bar(self: int) {}
    fn buz(a: int, self) {}
}

